# fantasy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: COLOR_SYSTEM.md  COMBAT_SYSTEM.md  CONCEPT.md  DECK.md  DECK_PROBABILITIES.md  DECK_VISUAL.md  ENCOUNTER_SYSTEM.md  ENEMY_BATTLES.md  FINALE.md  ITEMS_AND_ENEMIES.md  NPCS.md  PATHS.md  SCENARIO.md  SCENARIO_FULL.md  SPRITES.md  TODO.md  UI_DESIGN_SYSTEM.md
docs/palettes/: tihaya-tropa.gpl
scripts/: generate-audio.mjs
shaders/: scene.wgsl
src/: config.ts  game.rs  main.rs  main.ts  render3d.rs  style.css
src/audio/: combatAudio.ts
src/combat/: battleCardDefs.ts  combatTree.json  combatTree.ts  deckBuild.ts  deckSampling.ts  enemyBattleDefs.ts  engine.ts  extendedCardDefs.ts  responseDefs.ts  responseLoadout.ts  stanceDefs.ts  types.ts
src/data/: cards.ts  encounterWarnings.ts  integrationDeck.ts  items.ts  npcs.ts  rituals.ts  scenarioPart9.ts  scenarioParts1to4.ts  scenarioParts5to8.ts  story.ts  storyScenes.ts  worldZones.ts  zoneStories.ts
src/game/: Overworld.ts  encounters.ts  finaleTrack.ts  input.ts  overworldMaps.ts  types.ts
src/levels/: fireflyVillage.ts  foggyGrove.ts  gardenOfSilence.ts  mirrorGrove.ts  mountainPath.ts  quietMeadow.ts  quietRiver.ts  registry.ts  threshold.ts  types.ts  whisperHills.ts
src/lore/: boss.ts  buffs.ts  catalog.ts  catalogRepository.ts  enemies.ts  index.ts  mechanics.ts  spells.ts  types.ts  weapons.ts
src/objects/: InteractableObject.ts  InteractionPrompt.ts  NPC.ts  Player.ts
(+137 files in other folders)
