[package]
name = "fantasy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.32.3"
egui-wgpu = "0.32.3"
egui-winit = "0.32.3"
env_logger = "0.11.10"
glam = "0.32.1"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.13"
